traffic add validate name single

--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -93,7 +93,7 @@
                     <span>{{'botBlacklist' | translate}}</span>
                 </a>
             </li>
-            <li ui-sref-active="active" has-permission="setting.invoices.show" operation="show">
+            <li ui-sref-active="active" has-permission="setting.invoice.show" operation="show">
                 <a ui-sref="setApp.invoices" md-ink-ripple>
                     <i class="icon-fp-02 fonts14"></i>
                     <span>{{'invoices' | translate}}</span>
