--- a/Front/src/tpl/trafficSource-edit-dialog.html
+++ b/Front/src/tpl/trafficSource-edit-dialog.html
@@ -1,5 +1,5 @@
-<md-dialog class="cs-edit-dialog" ng-cloak>
-    <md-toolbar>
+<md-dialog class="cs-edit-dialog" aria-label="Edit Dialog">
+    <md-toolbar aria-label="Toolbar">
         <div class="md-toolbar-tools cam-title">
             <h2 class="md-title">{{ctrl.title | translate}} - {{ctrl.titleType | translate}}</h2>
         </div>
@@ -20,10 +20,16 @@
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Name<span class="star-icon">*</span>：</label>
-                <div class="col-sm-7">
-                    <input type="text" name="name" class="form-control" ng-model="item.name" required>
-                    <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
-                    <span ng-show="editForm.name.$error.required">Name is required.</span>
+                <div class="col-sm-8">
+                    <input type="text" name="name" class="form-control" ng-model="item.name"
+                      ng-blur="nameRequired()"
+                      async-check-name="checkNameParams"
+                      async-validator-callback="validateCallback"
+                      post-validater-callback="postValidateCallback()"
+                    >
+                    <span style="color:red" ng-show="editForm.name.$invalid">
+                        <span ng-show="editForm.name.$error.asyncCheckName">Name already exists.</span>
+                        <span ng-show="editForm.name.$error.nameRequired">Name is required.</span>
                     </span>
                 </div>
             </div>
