--- a/Front/src/tpl/eventLog.html
+++ b/Front/src/tpl/eventLog.html
@@ -6,13 +6,13 @@
 <div class="form-column bot-blacklist">
   <div class="container event-log clearfix">
     <div class="form-group bot-select" has-permission="setting.eventLog.selectUser" operation="show">
-      <md-select class="cs-subform-select" ng-model="filter.userId">
+      <md-select aria-label="User ID" class="cs-subform-select" ng-model="filter.userId">
         <md-option value="ALL">All users</md-option>
         <md-option ng-repeat="member in members" value="{{member.idText}}">{{member.email}}</md-option>
       </md-select>
     </div>
     <div class="form-group bot-select">
-      <md-select class="cs-subform-select" ng-model="filter.actionType">
+      <md-select aria-label="Action Type" class="cs-subform-select" ng-model="filter.actionType">
         <md-option value="0">All actions</md-option>
         <md-option value="1">Create</md-option>
         <md-option value="2">Change</md-option>
@@ -21,7 +21,7 @@
       </md-select>
     </div>
     <div class="form-group bot-select">
-      <md-select class="cs-subform-select" ng-model="filter.entityType">
+      <md-select aria-label="Entity Type" class="cs-subform-select" ng-model="filter.entityType">
         <md-option value="0">All entity types</md-option>
         <md-option value="1">Campaign</md-option>
         <md-option value="2">Lander</md-option>
@@ -31,7 +31,7 @@
       </md-select>
     </div>
     <div class="form-group bot-select">
-      <md-select class="cs-subform-select" ng-model="filter.datetype">
+      <md-select aria-label="Date Type" class="cs-subform-select" ng-model="filter.datetype">
         <md-option value="1">Today</md-option>
         <md-option value="2">Yesterday</md-option>
         <md-option value="3">Last 7 days</md-option>
