--- a/Front/src/tpl/change-paln-dialog.html
+++ b/Front/src/tpl/change-paln-dialog.html
@@ -72,12 +72,15 @@
     </section> -->
   </md-dialog-content>
   <md-dialog-actions>
-    <p class="note" ng-show="groups.length != 1">
-      You can change your account to one of the following:
-      <a href="javascript:;" ng-repeat="group in groups" ng-click="changeGroup(group)">
-        {{group.firstname}}
-      </a>
-    </p>
+    <div flex>
+      <p class="note" ng-show="groups.length != 1">
+        You can change your account to one of the following:
+        <a href="javascript:;" ng-repeat="group in groups" ng-click="changeGroup(group)">
+          {{group.firstname}}
+        </a>
+      </p>
+      <p class="note" ng-class="{hide: !noPlan}">Click <a href="javascript:;" ng-click="logout()">here</a>to log out from your account</p>
+    </div>
     <md-button class="md-primary" ng-click="ctrl.cancel()" ng-class="{hide: noPlan}">{{'cancel' | translate}}</md-button>
   </md-dialog-actions>
 </md-dialog>
