--- a/Front/src/tpl/conversionUpload.html
+++ b/Front/src/tpl/conversionUpload.html
@@ -15,7 +15,7 @@
     <span style="color: red" ng-show="errorMessage" ng-repeat="err in errorMessage">{{'Error in line ' + err.I + ': ' + err.E}}<br></span>
   </form>
   <div class="profile-form-footer clearfix">
-    <md-button class="save-btn" ng-click="conversionSave()" ng-disabled="conversionStatus">
+    <md-button class="save-btn" ng-click="conversionSave()" ng-disabled="!conversionContent || conversionStatus">
     <i class="icon-ok"></i>
     save
     </md-button>
