--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -109,7 +109,7 @@
                             {{'apply changes' | translate}}
                         </md-button>
 
-                        <md-button class="md-raised md-primary cs-compact cs-add-button red-btn"  ng-click="viewCloumnClose($event)">
+                        <md-button class="md-raised md-primary cs-compact red-btn"  ng-click="viewCloumnClose($event)">
                             <i class="icon-remove"></i>
                             {{'close' | translate}}
                         </md-button>
