--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -85,6 +85,17 @@
             <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn" ng-click="applySearch($event)" translate>apply</md-button>
 
             <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn" ng-click="editItem($event)" translate>add</md-button>
+
+            <a ui-sref="app.report.campaign" ng-hide="perfType == 'campaign'" class="hide">
+              <md-button
+                class="md-raised md-primary cs-compact cs-add-button blue-btn"
+                translate
+              >
+                <i class="icon-plus"></i>
+                Campaign
+              </md-button>
+            </a>
+
             <div class="view_column blue-btn" ng-click="viewColumnClick()">
                 <div class="view_column_con" ng-show="viewColumnIsShow">
                     <ul class="view_column_list">
