添加支付宝支付

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -93,7 +93,7 @@
                     <span>{{'affiliate' | translate}}</span>
                 </a>
             </li>
-            <li ui-sref-active="active" has-permission="report.conversion.show" operation="show">
+            <li ui-sref-active="active" has-permission="report.conversions.show" operation="show">
                 <a ui-sref="app.report.conversion" md-ink-ripple>
                     <i class="icon-pull fonts18"></i>
                     <span>{{'Conversions' | translate}}</span>
