--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -3,7 +3,7 @@
       <!-- <md-button class="md-icon-button" hide-gt-sm ng-click="toggleLeftNav()" aria-label="Toggle Left Nav">
           <md-icon>menu</md-icon>
       </md-button> -->
-      <h1><img src="assets/img/logo-three.png"></h1>
+      <h1><img src="../assets/img/logo-three.png"></h1>
 
       <div flex></div>
       <div class="home">
