--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -12,9 +12,9 @@
         <div class="setting">
           <a class="setting-link" ui-sref="setApp.profile"><i class="icon-s-03 fonts15"></i></a>
         </div>
-        <div class="changeplan">
+        <div class="changeplan hide">
         <a href="#"><i class="icon-money-02 fonts16"></i>Change Plan</a>
-    </div>
+      </div>
         <div class="coupon-btn">
             <a href="javascript:;" ng-click="goCoupon()">
             <div class="coupon-btn-col">
