--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -12,7 +12,7 @@
       <div class="setting">
         <a class="setting-link" ui-sref="setApp.profile"><i class="icon-s-03 fonts15"></i></a>
       </div>
-      <div class="changeplan">
+      <div class="changeplan hide">
           <a href="#"><i class="icon-money-02 fonts16"></i>Change Plan</a>
       </div>
       <div class="coupon-btn">
