添加free支付宝支付

--- a/Front/src/tpl/edit-change-paln-dialog.html
+++ b/Front/src/tpl/edit-change-paln-dialog.html
@@ -45,11 +45,12 @@
                 </label>
               </div>
               <div class="alipay-code">
-                <img src="../assets/img/plan_1.jpg" ng-show="plans[0].id == id && payType == 0"/>
-                <img src="../assets/img/plan_2.jpg" ng-show="plans[1].id == id && payType == 0"/>
-                <img src="../assets/img/plan_3.jpg" ng-show="plans[2].id == id && payType == 0"/>
+                <img src="../assets/img/plan_0.jpg" ng-show="plans[0].id == id && payType == 0"/>
+                <img src="../assets/img/plan_1.jpg" ng-show="plans[1].id == id && payType == 0"/>
+                <img src="../assets/img/plan_2.jpg" ng-show="plans[2].id == id && payType == 0"/>
+                <img src="../assets/img/plan_3.jpg" ng-show="plans[3].id == id && payType == 0"/>
               </div>
-              <p ng-show="payType == 0" style="color:#666;">Please contact the Skype: live:support_44609 to open your account after payment</p>
+              <p ng-show="payType == 0" style="color:#666;text-align: center;">Please contact the Skype: live:support_44609 to open your account after payment</p>
             </div>
           </div>
           <div class="col-md-4 my-price my-price-select">
