--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -98,7 +98,9 @@
                 <span class="line -left"></span>
                 <span class="line -bottom"></span>
             </a></li>
-
+            <li><a class="freetrial-btn" href="http://panel.newbidder.com/#/access/signup">
+                Free Trial
+            </a>
         </ul>
 </div>
 <div class="container">
@@ -466,12 +468,10 @@
 <footer class="footer-box" id="section-3">
     <div class="container">
         <div class="row">
-            <div class="col-md-8 col-xs-6">
+            <div class="col-md-12 col-xs-12">
                 <div class="row">
-                <div class="col-xs-12 col-md-6">
-                <h4>Contact</h4>
-                <span><a href="mailto:contact@newbidder.com"><i class="icon-envelope"></i>contact@newbidder.com</a></span><br>
-                <span><a href="#"><i class="icon-skype icon-skype-font"></i>live:support_44609</a></span><br>
+
+                <div class="col-xs-6 col-sm-4">
                 <h4 class="con-title">Get Connected</h4>
                 <ul class="list-01">
                     <li><a href="https://www.facebook.com/newbidder" target="_blank"><i class="icon-facebook-sign"></i>Facebook</a></li>
@@ -480,7 +480,12 @@
                         </a></li>
                 </ul>
                 </div>
-                <div class="col-xs-12 col-md-6">
+                <div class="col-xs-6 col-sm-4">
+                        <h4>Contact</h4>
+                        <span><a href="mailto:contact@newbidder.com"><i class="icon-envelope"></i>contact@newbidder.com</a></span><br>
+                        <span><a href="#"><i class="icon-skype icon-skype-font"></i>live:support_44609</a></span><br>
+                    </div>
+                <div class="col-xs-12 col-sm-4">
                     <h4>Product</h4>
                     <ul class="product-box">
                         <li><img src="img/f-icon-01.png">Newbidder TRK</li>
@@ -511,9 +516,10 @@
             <!--</div>-->
         </div>
     </div>
-    <div class="bottom-box">© Copyright  new bidder. 2017 All rights reserved<span><a href="#">Privacy policy</a>|<a href="#">Terms and conditions</a></span></div>
+    <div class="bottom-box">© Copyright newbidder. 2017 All rights reserved</div>
 
 </footer>
+<div class="address-box"><img src="img/address.png"></div>
 
 </body>
 
