--- a/Front/src/tpl/signup-success.html
+++ b/Front/src/tpl/signup-success.html
@@ -20,3 +20,9 @@
     </button>
   </div>
 </div>
+<script>
+fbq('track', 'CompleteRegistration', {
+  value: 25.00,
+  currency: 'USD'
+});
+</script>
