NB-241支付页面的个人信息是可以编辑的

--- a/Front/src/tpl/edit-change-paln-dialog.html
+++ b/Front/src/tpl/edit-change-paln-dialog.html
@@ -10,7 +10,7 @@
     <form name="form" ng-submit="planCommit()">
         <div>
           <div class="col-md-8 my-price-l">
-            <h2>Billing details</h2>
+            <!-- <h2>Billing details</h2>
             <ul class="p-edit">
               <li><i class="icon-circle-blank"></i><span>billing name</span><em>{{item.billingname}}</em></li>
               <li><i class="icon-circle-blank"></i><span>Address line 1</span><em>{{item.addressline1}}</em></li>
@@ -18,8 +18,8 @@
               <li><i class="icon-circle-blank"></i><span>ZIP / Postal code</span><em>{{item.postalcode}}</em></li>
               <li><i class="icon-circle-blank"></i><span>State /Region</span><em>{{item.stateregion}}</em></li>
               <li><i class="icon-circle-blank"></i><span>Country</span><em>{{item.country}}</em></li>
-              <!-- <li class="edit-xg"><em><a id="edit" href="#"><i class="icon-edit"></i>EDIT</a></em></li> -->
-            </ul>
+              <li class="edit-xg"><em><a id="edit" href="#"><i class="icon-edit"></i>EDIT</a></em></li>
+            </ul> -->
             <!-- <h2>Payment method detalis<a href="#"><i class="icon-edit"></i>EDIT</a></h2>
             <ul class="p-pay">
               <li><i class="icon-circle-blank"></i><span class="p-pay-l">PayPal account</span><span class="p-pay-r">{{userItem.email}}</span></li>
