--- a/Front/src/tpl/dashBoard.html
+++ b/Front/src/tpl/dashBoard.html
@@ -55,40 +55,54 @@
         <div class="col-xs-12 col-sm-12 col-md-7">
             <div class="col-xs-3 col-sm-3 col-md-3 data-list-con">
                 <i class="icon-k-01 fonts26 se-01"></i>
+                <div class="data-list-con-r">
                 <div class="data-num">{{summary.visits || 0 | number}}</div>
                 <h3>Visits</h3>
+                </div>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 data-list-con">
                 <i class="icon-d-02 fonts26 se-02"></i>
+                <div class="data-list-con-r">
                 <div class="data-num">{{summary.clicks || 0 | number}}</div>
                 <h3>Clicks</h3>
+                    </div>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 data-list-con">
                 <i class="icon-sj-dc fonts26 se-03"></i>
+                <div class="data-list-con-r">
                 <div class="data-num">{{summary.conversions || 0 | number}}</div>
                 <h3>Conversions</h3>
+                    </div>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 data-list-con">
                 <i class="icon-m-10 fonts26 se-04"></i>
-                <div class="data-num"><small>$</small>{{summary.revenue || 0.00 | number}}</div>
+                <div class="data-list-con-r">
+                <div class="data-num"><small>$</small>{{summary.revenue || 160000.00 | number}}</div>
                 <h3>Revenue</h3>
+                    </div>
             </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-5">
             <div class="col-xs-4 col-sm-4 col-md-4 data-list-con">
                 <i class="icon-m-tg fonts26 se-05"></i>
+                <div class="data-list-con-r">
                 <div class="data-num"><small>$</small>{{summary.cost || 0.00 | number}}</div>
                 <h3>Cost</h3>
+                    </div>
             </div>
-            <div class="col-xs-4 col-sm-4 col-md-4 data-list-con">
+            <div class="col-xs-5 col-sm-5 col-md-5 data-list-con">
                 <i class="icon-m-09 fonts26 se-06"></i>
-                <div class="data-num"><small>$</small>{{summary.profit || 0.00 | number}}</div>
+                <div class="data-list-con-r">
+                <div class="data-num"><small>$</small>{{summary.profit || 1500000.00 | number}}</div>
                 <h3>Profit</h3>
+                    </div>
             </div>
-            <div class="col-xs-4 col-sm-4 col-md-4 data-list-con data-list-con-line">
+            <div class="col-xs-3 col-sm-3 col-md-3 data-list-con data-list-con-line">
                 <i class="icon-sj-ss fonts26 se-07"></i>
+                <div class="data-list-con-r">
                 <div class="data-num">{{summary.roi || 0.00 | number}}%</div>
                 <h3>ROI</h3>
+                    </div>
             </div>
         </div>
     </div>
