--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -6,14 +6,14 @@
       <h1><img src="../assets/img/logo-three.png"></h1>
 
       <div flex></div>
+      <div class="changeplan hide">
+          <a href="#">Choose Plan<i class="icon-choose fonts28"></i></a>
+      </div>
       <div class="home">
         <a class="home-link" ui-sref="app.report.campaign"><i class="icon-home fonts17"></i></a>
       </div>
       <div class="setting">
         <a class="setting-link" ui-sref="setApp.profile"><i class="icon-s-03 fonts15"></i></a>
-      </div>
-      <div class="changeplan hide">
-          <a href="#"><i class="icon-money-02 fonts16"></i>Change Plan</a>
       </div>
       <div class="coupon-btn">
           <a href="javascript:;" ng-click="goCoupon()">
