--- a/Front/src/tpl/ts-report.html
+++ b/Front/src/tpl/ts-report.html
@@ -74,6 +74,7 @@
 </div>
 
 <div flex layout="column" class="cs-page-content report">
+    <div class="table-box">
     <md-table-container>
         <table md-table multiple ng-model="selected" md-progress="promise">
             <thead md-head md-order="query.order">
@@ -103,6 +104,7 @@
             </tbody>
         </table>
     </md-table-container>
+    </div>
     <md-table-pagination
         md-limit="query.limit"
         md-limit-options="[50, 100, 200, 500, 1000]"
@@ -110,5 +112,6 @@
         md-total="{{report.totalRows}}"
         md-page-select
     >
+
     </md-table-pagination>
 </div>
