--- a/Front/src/tpl/change-paln-dialog.html
+++ b/Front/src/tpl/change-paln-dialog.html
@@ -25,7 +25,7 @@
             </li>
         </ul>
     </div>
-    <p class="text-center text-danger note" ng-show="item.plan">this charging is for the purpose of confirming validated Users，1$ will be returned to your account in 2 hours.</p>
+    <p class="text-danger note" ng-show="item.plan">Free plan is charging for the purpose of confirming validated Users，1$ will be returned to your account in 24 hours.</p>
     <!-- <section id="sliderPricing">
         <div>
             <div class="row">
