--- a/Front/src/tpl/dashBoard.html
+++ b/Front/src/tpl/dashBoard.html
@@ -77,7 +77,7 @@
             <div class="col-xs-3 col-sm-3 col-md-3 data-list-con">
                 <i class="icon-m-10 fonts26 se-04"></i>
                 <div class="data-list-con-r">
-                <div class="data-num"><small>$</small>{{summary.revenue || 160000.00 | number}}</div>
+                <div class="data-num"><small>$</small>{{summary.revenue || 0.00 | number}}</div>
                 <h3>Revenue</h3>
                     </div>
             </div>
@@ -93,7 +93,7 @@
             <div class="col-xs-5 col-sm-5 col-md-5 data-list-con">
                 <i class="icon-m-09 fonts26 se-06"></i>
                 <div class="data-list-con-r">
-                <div class="data-num"><small>$</small>{{summary.profit || 1500000.00 | number}}</div>
+                <div class="data-num"><small>$</small>{{summary.profit || 0.00 | number}}</div>
                 <h3>Profit</h3>
                     </div>
             </div>
