--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -87,7 +87,7 @@
                     <span>{{'userManagement' | translate}}</span>
                 </a>
             </li>
-            <li ui-sref-active="active" has-permission="setting.blackList.show" operation="show">
+            <li ui-sref-active="active" has-permission="setting.blacklist.show" operation="show">
                 <a ui-sref="setApp.botBlacklist" md-ink-ripple>
                     <i class="icon-hmd-02 fonts15"></i>
                     <span>{{'botBlacklist' | translate}}</span>
