--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -86,7 +86,7 @@
 
             <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn" ng-click="editItem($event)" translate>add</md-button>
 
-            <a ui-sref="app.report.campaign" ng-hide="perfType == 'campaign'" class="hide">
+            <a ng-hide="perfType == 'campaign'" ng-click="addNewCampaign()">
               <md-button
                 class="md-raised md-primary cs-compact cs-add-button blue-btn"
                 translate
