--- a/Front/src/tpl/signup.html
+++ b/Front/src/tpl/signup.html
@@ -78,7 +78,7 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-12 sign-input">
-                    <i class="icon-qq form-control-feedback"></i>
+                    <i class="icon-qq form-control-feedback" style="font-size: 16px; margin-left: -3px;"></i>
                     <input type="text" name="qq" placeholder="QQ" class="form-control"
                        ng-model="user.qq"
                        ng-required="!user.skype"
