--- a/Front/src/tpl/flow-edit.html
+++ b/Front/src/tpl/flow-edit.html
@@ -1,5 +1,5 @@
 <div class="cs-page-flow clearfix" ng-click="clearOnEdit()">
-  <div class="col-sm-6 col-md-4 col-lg-3 cs-flow-tree">
+  <div class="col-sm-3 col-md-3 cs-flow-tree">
     <div ng-click="editFlow()" ng-class="{'cs-flow-active':onEdit=='flow'}" class="tree-li" ng-show="flowMode">
       <i class="material-icons tree-icon">album</i>
       <span class="cs-flow-name">{{flow.name}}</span>
