--- a/www.newbidder.com/campaign.html
+++ b/www.newbidder.com/campaign.html
@@ -11,6 +11,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Tracking,Affiliate Tracking,Tracker,SaaS,Newbidder">
     <title>Newbidder - Why Choose Newbidder Over Other Tracking Platforms?</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="x-icon" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
