--- a/Front/src/tpl/offer-edit-dialog.html
+++ b/Front/src/tpl/offer-edit-dialog.html
@@ -7,7 +7,7 @@
 
     <div class="offer-remind">
         <i class="material-icons">info_outline</i>
-        It is required to use the {clickId} token if you want to track conversions.
+        It is required to use the {click.id} token if you want to track conversions.
     </div>
 
     <md-dialog-content class="md-dialog-content">
