setup.html delete <

--- a/Front/src/tpl/setUp.html
+++ b/Front/src/tpl/setUp.html
@@ -28,7 +28,7 @@
     <div class="domain-p">
 
       <p><i class="material-icons">info_outline</i>Server-to-server postback URLs are the most secure and reliable method to count conversions. Use the URLs below to pass conversions from affiliate networks. To get your postback links working you have to:</p>
-      <p>1.Include the <<b>{clickId}</b>token in your offer URLs. For example, you can add ?subid={clickId} to the offer URL, to have the click ID passed to the postback via the <b>subid</b> parameter on the affiliate network/advertiser side.<br>
+      <p>1.Include the <b>{clickId}</b>token in your offer URLs. For example, you can add ?subid={clickId} to the offer URL, to have the click ID passed to the postback via the <b>subid</b> parameter on the affiliate network/advertiser side.<br>
       2.Copy-paste the postback URL to your affiliate network panel. Make sure to <b>replace the tokens</b> with affiliate network-specific tokens. The following is what your postback URL would look like on a HasOffers based network: <span class="blue-word">{{mainDomain}}?cid={aff_sub} and payout={payout}</span></p>
       <p>Consult the affiliate network documentation or support to find out which tokens you should use to pass back click ID and payout. The payout parameter is optional, if you do not use it, you can manually specify the payout in the offer configuration. Do not put these URLs or any of the tracking pixels / scripts in your landing pages.</p>
     </div>
